--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -9,6 +9,10 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <meta name="google-signin-scope" content="profile email" />
+    <meta name="google-signin-client_id" content="%REACT_APP_GOOGLE_API_KEY%" />
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
